--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "cropperjs": "^1.5.13",
+    "dropzone": "6.0.0-beta.2",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "two-up-element": "^1.0.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/dropzone": "^5.7.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
