--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "dropzone": "6.0.0-beta.2",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "just-debounce-it": "^3.2.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "two-up-element": "^1.0.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
